[build-system]
requires = [ "setuptools>=61.2",]
build-backend = "setuptools.build_meta"

[project]
name = "aurora-asi-lib"
version = "0.21.1"
description = "An open source package providing data access and analysis tools for the world's all-sky imager (ASI) data."
keywords = [ "aurora", "all sky imager", "REGO", "THEMIS", "TREx",]
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",

    "Programming Language :: Python :: 3", 
    "Programming Language :: Python :: 3.9", 
    "Programming Language :: Python :: 3.10", 
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    ]
dependencies = [
    "wheel", 
    "beautifulsoup4", 
    "requests", 
    "numpy < 2.0", 
    "scipy >= 1.10.0",
    "pandas", 
    "matplotlib >= 3.7, <4.0", 
    "cdflib >= 0.3.20", 
    "ffmpeg-python", 
    "pymap3d", 
    "aacgmv2", 
    "pyshp >= 2.3", 
    "rego-imager-readfile>=1.2.0, < 2.0", 
    "themis-imager-readfile>=1.2.1, < 2.0", 
    "trex-imager-readfile>=1.5.1, < 2.0", 
    "opencv-python >= 4.8.0, < 5.0",
    ]

[[project.authors]]
name = "Mykhaylo Shumko"
email = "msshumko@gmail.com"

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
Homepage = "https://aurora-asi-lib.readthedocs.io/"
Documentation = "https://aurora-asi-lib.readthedocs.io/"
Source = "https://github.com/mshumko/aurora-asi-lib"
Issues = "https://github.com/mshumko/aurora-asi-lib/issues"
Changelog = "https://github.com/mshumko/aurora-asi-lib/blob/main/CHANGELOG.md"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
asilib = [ "*.csv", "*.zip",]

[tool.setuptools.packages.find]
namespaces = false
