[build-system]
requires = [ "setuptools>=61.2",]
build-backend = "setuptools.build_meta"

[project]
name = "asilib"
version = "0.26.5"
description = "An open source package providing data access and analysis tools for the world's all-sky imager (ASI) data."
keywords = [ "aurora", "all sky imager", "REGO", "THEMIS", "TREx",]
license = {text = "BSD 3-Clause"}
classifiers = [
    "Programming Language :: Python :: 3", 
    "Programming Language :: Python :: 3.9", 
    "Programming Language :: Python :: 3.10", 
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    ]
dependencies = [
    "wheel", 
    "beautifulsoup4", 
    "requests", 
    "numpy < 2.0", 
    "scipy >= 1.10.0",
    "pandas", 
    "matplotlib >= 3.7, <4.0", 
    "ffmpeg-python", 
    "pymap3d", 
    "aacgmv2", 
    "pyshp >= 2.3", 
    "rego-imager-readfile>=1.2.0, < 2.0", 
    "themis-imager-readfile>=1.2.1, < 2.0", 
    "trex-imager-readfile>=1.5.1, < 2.0", 
    "opencv-python >= 4.8.0, < 5.0",
    ]

[[project.authors]]
name = "Mykhaylo Shumko"
email = "msshumko@gmail.com"

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
Homepage = "https://aurora-asi-lib.readthedocs.io/"
Documentation = "https://aurora-asi-lib.readthedocs.io/"
Source = "https://github.com/mshumko/asilib"
Issues = "https://github.com/mshumko/asilib/issues"
Changelog = "https://github.com/mshumko/asilib/blob/main/CHANGELOG.md"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
asilib = [ "*.csv", "*.zip",]

[tool.setuptools.packages.find]
namespaces = false

[tool.pytest.ini_options]
addopts = "--cov=asilib --cov-report term:skip-covered"

[tool.coverage.run]
omit = [
    "tests//*",
    "examples//*",
    "__main__.py",
    "setup.py",
    "asilib//asi//psa_emccd.py",
    "asilib//asi//lamp_phantom.py",
    ]