[metadata]
name = aurora-asi-lib
version = 0.18.1
url=https://github.com/mshumko/aurora-asi-lib
author=Mykhaylo Shumko
author_email=msshumko@gmail.com
description = Easily download, plot, animate, and analyze auroral all sky imager (ASI) data.
long_description = file: README.md 
long_description_content_type = text/markdown
licence_file = LICENSE
keywords = aurora, all sky imager, Red-line Emission Geospace Observatory, REGO, 
    Time History of Events and Macroscale Interactions during Substorms, THEMIS
license = GNU GENERAL PUBLIC LICENSE v3.0
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages = find:
include_package_data = True
install_requires = 
    wheel
    beautifulsoup4
    requests
    numpy
    scipy
    pandas<2
    matplotlib >=3.7, <4.0
    cdflib>=0.3.20
    ffmpeg-python
    pymap3d
    aacgmv2
    pyshp
    rego-imager-readfile>=1.2.0, < 2.0
    themis-imager-readfile>=1.2.1, < 2.0
    trex-imager-readfile>=1.4.0, < 2.0

[options.package_data]
asilib =
    *.csv
    *.zip